# vkxml

./: Cargo.toml  LICENSE  README.md
docs/: search-index.js
docs/serde/: trait.Serialize.html
docs/vkgen/: ArraySize.t.html  BarValue.t.html  CExpression.t.html  CommaSeparatedBooleans.t.html  EnumerationPurpose.t.html  Enums.t.html  ExtensionConstant.t.html  ExtensionElement.t.html  FeatureReference.t.html  FeatureSpecification.t.html  FunctionPointer.t.html  InOut.t.html  Pipeline.t.html  RegistryElement.t.html  ResultCodes.t.html  ReturnType.t.html  StructMember.t.html  UnionMember.t.html  enum.ArraySize.html  enum.ArrayType.html  enum.Definition.html  enum.DefinitionsElement.html  enum.EnumerationElement.html  enum.EnumerationPurpose.html  enum.EnumsElement.html  enum.ExtensionElement.html  enum.ExtensionSpecificationElement.html  enum.ExtensionType.html  enum.FeatureElement.html  enum.FeatureReference.html  enum.HandleType.html  enum.InOut.html  enum.IncludeStyle.html  enum.Pipeline.html  enum.ReferenceType.html  enum.RegistryElement.html  enum.Renderpass.html  enum.StructElement.html  index.html  sidebar-items.js  (+50 more)
docs/vkxml/: CommaSeparatedIdentifiers.t.html  Constants.t.html  Define.t.html  DefinitionsElement.t.html  EnumerationDeclaration.t.html  EnumerationElement.t.html  EnumsElement.t.html  ExtensionEnum.t.html  ExtensionSpecification.t.html  ExtensionSpecificationElement.t.html  ExternalSync.t.html  FeatureElement.t.html  HexadecimalNumber.t.html  IncludeStyle.t.html  NamedIdentifier.t.html  Notation.t.html  Renderpass.t.html  (+64 more)
src/: lib.rs  main.rs
(+61 files in other folders)
